# glitch-engine

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/: lib.hpp
engine/src/: lib.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
